--- a/public/popup.css
+++ b/public/popup.css
@@ -1,6 +1,7 @@
 .extension-container {
-  min-width:300px;
-  min-height:400px;
+  width:300px;
+  height:400px;
+  padding:10px;
 }
 
 .buttons {
@@ -14,6 +15,14 @@
 
 .buttons button {
   min-width:100px;
+}
+
+.button-active {
+  color:purple;
+}
+
+.button-inactive {
+  color:white;
 }
 
 .form {
@@ -54,3 +63,4 @@
 .form-input input {
   margin-bottom:10px;
 }
+
