--- a/public/popup.css
+++ b/public/popup.css
@@ -1,90 +1,99 @@
+html {
+  background: rgb(201, 201, 201);
+}
+
+body {
+  background: white;
+  margin: 0;
+  border-radius: 3px;
+}
+
 .extension-container {
-  width:300px;
-  height:400px;
-  padding:10px;
+  width: 300px;
+  /* height: 400px; */
+  padding: 16px;
 }
 
 .buttons {
-  float:bottom;
-  display:flex;
-  flex-direction:row;
-  align-items:center;
-  justify-content:space-evenly;
-  font-family:'Helvetica';
+  float: bottom;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  font-family: "Helvetica";
 }
 
 .buttons button {
-  min-width:100px;
+  min-width: 100px;
 }
-
 
 /*Snapshot form*/
 
 .form {
-  text-align:center;
-  display:flex;
-  flex-direction:column;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .form-buttons {
-  font-family:'Space Grotesk';
+  font-family: "Space Grotesk";
 }
 
-.form-buttons button, .form-buttons button:hover {
-  color:white !important;
+.form-buttons button,
+.form-buttons button:hover {
+  color: white !important;
 }
 
 .add-button {
-  background-color:#4F9D45 !important;
-  margin-bottom:5px;
+  background-color: #4f9d45 !important;
+  margin-bottom: 5px;
 }
 
 .name-button {
-  background-color:#e63946 !important;
+  background-color: #e63946 !important;
 }
 
 .download-button {
-  background-color:#457b9d !important;
+  background-color: #457b9d !important;
 }
 
 .section {
-  margin:15px 0px;
+  margin: 15px 0px;
 }
 
 .form a:hover {
-  font-weight:bold;
-  cursor:pointer;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-.form h5, .form h6 {
-  font-family:'Space Grotesk';
-  margin:0;
+.form h5,
+.form h6 {
+  font-family: "Space Grotesk";
+  margin: 0;
 }
 
 .form h5 {
-  font-size:14px;
-  margin:0;
-  color:red;
+  font-size: 14px;
+  margin: 0;
+  color: red;
 }
 
 .form h6 {
-  font-size:10px;
-  color:rgb(82, 82, 82);
-  margin:10px 0px 5px 0px;
+  font-size: 10px;
+  color: rgb(82, 82, 82);
+  margin: 10px 0px 5px 0px;
 }
 
 .form-input input {
-  margin-bottom:10px;
+  margin-bottom: 10px;
 }
 
 /* Screenshots page */
 h4 {
-  font-family:'Space Grotesk';
-  text-align:center;
+  font-family: "Space Grotesk";
+  text-align: center;
 }
 
-
-
 .blur {
-  filter:blue(30px);
+  filter: blue(30px);
 }
